Fix weird font sizing on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,8 @@ h2 {
 }
 
 a {
-    text-decoration: none;
+  font-size: 16px;    
+  text-decoration: none;
 }
 
 .column {
@@ -40,7 +41,8 @@ a {
 }
 
 .copy {
-    color: rgb(125, 125, 125);
+  font-size: 16px;    
+  color: rgb(125, 125, 125);
 }
 
 .cover {
